force-app/main/default/objects/Opportunity/fields/GLB_P1_ComisionCorredor__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_ComisionCorredor__c</fullName>
    <label>Comisión Corredor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>