force-app/main/default/objects/Opportunity/fields/GLB_P1_Deducible__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Deducible__c</fullName>
    <label>Deducible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>