force-app/main/default/objects/Opportunity/fields/GLB_P1_FechaHoraCierre__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FechaHoraCierre__c</fullName>
    <label>Fecha y Hora de Cierre</label>
    <type>DateTime</type>
</CustomField>