force-app/main/default/objects/Opportunity/fields/GLB_P1_HorasPrimeraLlamada__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_HorasPrimeraLlamada__c</fullName>
    <formula>timevalue( GLBP1_FechaHoraPrimeraLlamada__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas primera llamada</label>
    <type>Time</type>
</CustomField>