force-app/main/default/objects/Opportunity/fields/GLB_P1_HorasPrimerEmail__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_HorasPrimerEmail__c</fullName>
    <formula>TIMEVALUE( GLBP1_FechaHoraPrimeraLlamada__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas primer email</label>
    <type>Time</type>
</CustomField>