force-app/main/default/objects/Opportunity/fields/GLB_P1_IDExternoOportunidad__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_IDExternoOportunidad__c</fullName>
    <externalId>true</externalId>
    <label>ID Externo de oportunidad</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>