force-app/main/default/objects/Opportunity/fields/GLB_P1_NOportunidad__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_NOportunidad__c</fullName>
    <displayFormat>OP-{0000000}</displayFormat>
    <label>N°Oportunidad</label>
    <type>AutoNumber</type>
</CustomField>