force-app/main/default/objects/Opportunity/fields/GLB_P1_OportunidadRelacionada__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_OportunidadRelacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad relacionada</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>