force-app/main/default/objects/Opportunity/fields/GLB_P1_PagadorMismoQueDueno__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_PagadorMismoQueDueno__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Pagador es el mismo que el asegurado?</label>
    <type>Checkbox</type>
</CustomField>