force-app/main/default/objects/Opportunity/fields/GLB_P1_RutCuenta__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_RutCuenta__c</fullName>
    <externalId>true</externalId>
    <label>Rut Cuenta</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>