force-app/main/default/objects/Opportunity/fields/GLBP1_Bien_declarado__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Bien_declarado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bien declarado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GLBP1_Bien_declarado__c.GLBP1_PropietarioBien__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GLBP1_Bien_declarado__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>