force-app/main/default/objects/Opportunity/fields/GLBP1_FechaHoraPrimeraLlamada__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_FechaHoraPrimeraLlamada__c</fullName>
    <label>Fecha/Hora primera llamada</label>
    <type>DateTime</type>
</CustomField>