force-app/main/default/objects/Opportunity/fields/GLBP1_FechaHoraPrimerEmail__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_FechaHoraPrimerEmail__c</fullName>
    <label>Fecha/Hora primer email</label>
    <type>DateTime</type>
</CustomField>