force-app/main/default/objects/Opportunity/fields/GLBP1_N_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_N_Oportunidad__c</fullName>
    <displayFormat>OP-{000000}</displayFormat>
    <label>N°Oportunidad</label>
    <type>AutoNumber</type>
</CustomField>