force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Motivo de no conversión</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
                <label>Pérdida por otro competidor</label>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
                <label>Sin presupuesto</label>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
                <label>No decide / No responde</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <label>Precio</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Otro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>