force-app/main/default/objects/Opportunity/fields/ZRH_LM_Anio__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Anio__c</fullName>
    <label>Año</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>