force-app/main/default/objects/Opportunity/fields/ZRH_LM_Anio_creacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Anio_creacion__c</fullName>
    <description>Retorna el año de creación de la oportunidad</description>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <label>Año creacion</label>
    <type>Text</type>
</CustomField>