force-app/main/default/objects/Opportunity/fields/ZRH_LM_Codigo_de_marca__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Codigo_de_marca__c</fullName>
    <label>Código de marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>