force-app/main/default/objects/Opportunity/fields/ZRH_LM_Deducible__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Deducible__c</fullName>
    <label>Deducible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UF 0</fullName>
            </value>
            <value>
                <fullName>UF 3</fullName>
            </value>
            <value>
                <fullName>UF 5</fullName>
            </value>
            <value>
                <fullName>UF 10</fullName>
            </value>
            <value>
                <fullName>UF 15</fullName>
            </value>
            <value>
                <fullName>UF 20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>