force-app/main/default/objects/Opportunity/fields/ZRH_LM_Dia_creacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Dia_creacion__c</fullName>
    <description>Retorna el dia de creación de un rango de 1 a 31</description>
    <formula>TEXT(DAY(DATEVALUE(CreatedDate)))</formula>
    <label>Dia creacion</label>
    <type>Text</type>
</CustomField>