force-app/main/default/objects/Opportunity/fields/ZRH_LM_Direccion_pagador_igual_duenio__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Direccion_pagador_igual_duenio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Dirección del pagador = dueño del auto?</label>
    <type>Checkbox</type>
</CustomField>