force-app/main/default/objects/Opportunity/fields/ZRH_LM_Es_auto_nuevo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Es_auto_nuevo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Es auto nuevo?</label>
    <type>Checkbox</type>
</CustomField>