force-app/main/default/objects/Opportunity/fields/ZRH_LM_Factura_Guia_Despacho__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Factura_Guia_Despacho__c</fullName>
    <label>Factura / Guía de despacho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factura</fullName>
            </value>
            <value>
                <fullName>Guía despacho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>