force-app/main/default/objects/Opportunity/fields/ZRH_LM_Fecha_documento__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Fecha_documento__c</fullName>
    <label>Fecha documento</label>
    <type>Date</type>
</CustomField>