force-app/main/default/objects/Opportunity/fields/ZRH_LM_Firmado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Firmado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firmado</label>
    <type>Checkbox</type>
</CustomField>