force-app/main/default/objects/Opportunity/fields/ZRH_LM_Id_Propuesta__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Id_Propuesta__c</fullName>
    <label>Id Propuesta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>