force-app/main/default/objects/Opportunity/fields/ZRH_LM_Marca__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Marca__c</fullName>
    <label>Marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>