force-app/main/default/objects/Opportunity/fields/ZRH_LM_Medio_de_pago__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Medio_de_pago__c</fullName>
    <label>Medio de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Crédito</fullName>
            </value>
            <value>
                <fullName>Débito</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
            </value>
            <value>
                <fullName>PAT</fullName>
                <default>true</default>
                <label>PAT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>