force-app/main/default/objects/Opportunity/fields/ZRH_LM_Mes_creacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Mes_creacion__c</fullName>
    <description>Retorna el mes de creación de un rango de 1 a 12</description>
    <formula>TEXT(MONTH(DATEVALUE(CreatedDate)))</formula>
    <label>Mes creacion</label>
    <type>Text</type>
</CustomField>