force-app/main/default/objects/Opportunity/fields/ZRH_LM_Modelo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Modelo__c</fullName>
    <label>Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>