force-app/main/default/objects/Opportunity/fields/ZRH_LM_Monto_x_Documento__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Monto_x_Documento__c</fullName>
    <label>Monto x Documento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>