force-app/main/default/objects/Opportunity/fields/ZRH_LM_N_Documento__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_N_Documento__c</fullName>
    <label>N° Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>