force-app/main/default/objects/Opportunity/fields/ZRH_LM_Pagador_del_seguro__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Pagador_del_seguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pagador del seguro</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Pagador del seguro)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>