force-app/main/default/objects/Opportunity/fields/ZRH_LM_Patente__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Patente__c</fullName>
    <label>Patente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>