force-app/main/default/objects/Opportunity/fields/ZRH_LM_Posee_accesorios_extra__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Posee_accesorios_extra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Posee accesorios extra?</label>
    <type>Checkbox</type>
</CustomField>