force-app/main/default/objects/Opportunity/fields/ZRH_LM_Precio_pesos_chilenos__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Precio_pesos_chilenos__c</fullName>
    <label>Precio pesos chilenos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>