force-app/main/default/objects/Opportunity/fields/ZRH_LM_Quien_es_pagador_seguro__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Quien_es_pagador_seguro__c</fullName>
    <label>¿Quién es el pagador del seguro?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dueño del auto</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>