force-app/main/default/objects/Opportunity/fields/ZRH_LM_UF_Mensual__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_UF_Mensual__c</fullName>
    <label>UF Mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>