force-app/main/default/objects/Opportunity/fields/ZRH_LM_Uso__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Uso__c</fullName>
    <label>Uso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>