force-app/main/default/objects/Opportunity/fields/ZRH_LM_Valor_UF__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Valor_UF__c</fullName>
    <label>Valor UF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>