force-app/main/default/objects/Opportunity/recordTypes/FinServ__General.recordType-meta.xml
<RecordType>
    <fullName>FinServ__General</fullName>
    <active>true</active>
    <businessProcess>FinServ__Opportunity Process</businessProcess>
    <label>General</label>
</RecordType>