force-app/main/default/objects/Opportunity/recordTypes/ZRH_LM_Seguro_Auto_Digital.recordType-meta.xml
<RecordType>
    <fullName>ZRH_LM_Seguro_Auto_Digital</fullName>
    <active>true</active>
    <businessProcess>ZRH_LM_SeguroAutoDigital</businessProcess>
    <label>Seguro Auto Digital</label>
</RecordType>