force-app/main/default/objects/Opportunity/listViews/Todas_Oportunidades_Seguro_Auto_Digital.listView-meta.xml
<ListView>
    <fullName>Todas_Oportunidades_Seguro_Auto_Digital</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>ZRH_LM_Marca__c</columns>
    <columns>ZRH_LM_Modelo__c</columns>
    <columns>ZRH_LM_Valor_UF__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.ZRH_LM_Seguro_Auto_Digital</value>
    </filters>
    <label>Todas Oportunidades- Seguro Auto Digital</label>
</ListView>